# ARBInterp

./: .gitignore  CHANGELOG.md  CITATION.cff  README.md  pyproject.toml  setup.cfg
.github/workflows/: python-package-poetry.yml
notebooks/: output_shape.ipynb
src/ARBInterp/: ARBInterp.py  tricubic.py  tricubic0.py
src/qinterp/: __init__.py  base.py  quadcubic.py  scaled_by8_inverse_matrix.csv  tricubic.py  triquintic.py
tests/: ARBinterp.py  test_interp.py  test_triquintic.py
tests/fields/: Example3DScalarFieldResults.npz
