[metadata]
name = qinterp
version = 1.8.1
author = ['Paul Walker', 'Carmelo Mordini']
author_email = carmelo.mordini@gmail.com
license = GNU General Public License v3.0
description = Python tools for interpolating 3D or 4D fields
url = https://github.com/carmelom/qinterp
long_description = file: README.md

[options]
package_dir=
    =src
packages=find:
install_requires =
    numpy >= 1.21.1

[options.packages.find]
where=src